@startuml tester

' Interfaces/classes
interface OutputDeviceInterface {
    + init()
    + write_sample()
    + deinit()
}

class NiUsb6211 {
    + init()
    + find_devices()
    + error_handler()
    + write_sample()
    + write_samples_clocked()
    + read_samples()
    + get_reference_voltage()
    + get_measured_output_voltage()
    + deinit()
}

interface InputDeviceInterface {
    + init()
    + read_sample()
    + deinit()
}

class SerialDevice {
    + init()
    + read()
    + read_sample()
    + read_samples_clocked()
    + read_vcc()
    + deinit()
}

class Tester {
    + inputDevice
    + outputDevice
    + init()
    + run_tests()
    + output_data()
    + deinit()
}

'  Relations
OutputDeviceInterface <|-left- NiUsb6211
InputDeviceInterface <|-right- SerialDevice

Tester <-left- OutputDeviceInterface
Tester <-right- InputDeviceInterface

@enduml
